--- a/index.html
+++ b/index.html
@@ -5,13 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Git</title>
   </head>
-  <style>
-    h1 {
-      text-align: center;
-      color: blueviolet;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css" />
   <body>
     <h1>Hello Git</h1>
   </body>
+  <script src="script.js"></script>
 </html>
