--- a/index.html
+++ b/index.html
@@ -10,21 +10,28 @@
   <body>
     <div class="weather-app">
     <header>
+      <div>
       <form>
-        <input type="text" placeholder="Enter a city.." required />
-        <input type="submit" value="Search" />
+        <input type="text" placeholder="Enter a city.." required class="search-form-input"/>
+        <input type="submit" value="Search" class="search-form-button"/>
       </form>
+    </div>
     </header>
     <main>
+      <div class="weather-app-data"> 
       <div>
-        <h1>South Africa</h1>
-        <p>
+        <h1 class="weather-app-city">South Africa</h1>
+        <p class="weather-app-details">
           Tuesday 14:49, scattered clouds
           <br />
-          Humidity: 66%, Wind: 3.13km/h1
+          Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong> 
         </p>
-      </div>
-      <div>⛅ 12℃</div>
+      </div class="weather-app-temperature-container">
+        <div class="weather-app-icon">⛅</div>
+        <div class="weather-app-temperature">12</div>
+        <div class="weather-app-unit">℃</div>
+        </div>
+    </div>
     </main>
   </body>
   <footer>
