--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       <div>
         <h1 class="weather-app-city" id="city"></h1>
         <p class="weather-app-details">
-          Tuesday 14:49, scattered clouds
+          Tuesday 14:49, <span id="description">scattered clouds</span>
           <br />
-          Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong> 
+          Humidity: <strong id="humidity">66%</strong>, Wind: <strong id="wind-speed">3.13km/h</strong> 
         </p>
       </div class="weather-app-temperature-container">
         <div class="weather-app-icon">⛅</div>
