--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
       <div>
         <h1 class="weather-app-city" id="city"></h1>
         <p class="weather-app-details">
-          Tuesday 14:49, <span id="description">scattered clouds</span>
+          <span id="time">Tuesday</span>
+          <span id="description">scattered clouds</span>
           <br />
           Humidity: <strong id="humidity">66%</strong>, Wind: <strong id="wind-speed">3.13km/h</strong> 
         </p>
       </div class="weather-app-temperature-container">
-        <div class="weather-app-icon">⛅</div>
+          <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png" alt="" class="weather-app-icon"/>
         <div class="weather-app-temperature" id="temperature"></div>
         <div class="weather-app-unit">℃</div>
         </div>
