added city name

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
       <div class="weather-app-data"> 
       <div>
-        <h1 class="weather-app-city" id="city"></h1>
+        <h1 class="weather-app-city" id="city"> South Africa</h1>
         <p class="weather-app-details">
           <span id="time">Tuesday</span>
           <span id="description">scattered clouds</span>
